test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-nosync-rejected-create/downstream-not-created.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: generated-cm
  namespace: cpol-rejected-create-ns
