test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-nosync-rejected-create/setup-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-rejected-create-ns
  labels:
    layer: operational
