test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-nosync-rejected-create/ur-removed.yaml
apiVersion: kyverno.io/v2
kind: UpdateRequest
metadata:
  name: ur-phantom-rejected-create
  namespace: kyverno
